Fixed image path issue